"this is an experimental chnage"

--- a/Project-form.html
+++ b/Project-form.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Project-form</title>
   <link href="C:\Users\Nzubechukwu\Desktop\ezinne\css\Project-form.css" rel="stylesheet">
+  <script src="/Javascript/Project-client.js"></script>
 
 </head>
 <body>
@@ -110,8 +111,7 @@
 
              <textarea name="Comments" placeholder="Comments"></textarea> </textarea> <br />
 
-             <button id="submit"
-                          > <input type="submit" name="submit" value="Finish and Submit" />
+             <button id="submit" onclick="functClick()">Finishand Submit <input type="submit" name="submit" value="Finish and Submit" />
 
 
    </form>
