--- a/Projava.html
+++ b/Projava.html
@@ -81,7 +81,7 @@
           <div class="intro-block">
             <span class="intro-icon"><i class="fa fa-paint-brush"></i></span>
             <h3 id="work">OUR WORK</h3>
-            <p>lorm typus is simply a dummy text used in texts.<br />
+            <p>Work is awesome when the team is dedicated, lorm typus is simply a dummy text used in texts.<br />
             Industry,Lorem ipsum dolor sit amet consectetur.<br />
         Industry,Lorem ipsum dolor sit amet consectetur.</p>
           </div>
